react_webviews/src/common/theme/Style.scss
/* ... */
.Accordion:last-child {
  border-bottom: solid 1px #c2c2c2;
}

.AccordionTitle {
  cursor: pointer;
}

.AccordionBody ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
  padding-top: 15px;
  padding-left: 30px;
}

.AccordionBody ul li span {
  font-weight: normal;
}

.AccordionBody ul li {
  padding: 10px 0;
  font-size: 14px;
}

.Footer {
  background: #fff;
  z-index: 100;
}

.Loader {
  background: #fff;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 200;
}

.LoaderOverlay {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

.Loader-Dialog {
  opacity: 0.9;
  z-index: 999999;
}

.LoaderOverlayText {
  color: #0a1d32;
  font-size: 14px;
  line-height: 19px;
  margin: 10px 0 0 0;
  font-weight: 400;
}

.Step {
  flex-direction: row;
  display: flex;
  position: fixed;
  top: 56px;
  left: 0;
  right: 0;
  z-index: 1000;
  background: white;
}

.Step span {
  background: #cacaca;
  height: 3px;
  flex: 1;
  display: inline-block;
  box-sizing: border-box;
  margin-right: 3px;
}

.Step span.active {
  /* background: #250087; */
  height: 3px;
  flex: 1;
  display: inline-block;
  box-sizing: border-box;
  margin-right: 3px;
}

.Step span:last-child {
  margin-right: 0;
}

.Progress {
  height: 10px;
  position: relative;
  background: #ebebeb;
  -moz-border-radius: 25px;
  -webkit-border-radius: 25px;
  border-radius: 25px;
  /*box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);*/
  flex: 2;
}

.Progress > span {
  display: block;
  height: 100%;
  border-top-right-radius: 20px;
  border-bottom-right-radius: 20px;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  background-color: #3023ae;
  background-image: linear-gradient(to right, #3023ae, #c86dd7);
  /*box-shadow:
    inset 0 2px 9px  rgba(255,255,255,0.3),
    inset 0 -2px 6px rgba(0,0,0,0.4);*/
  position: relative;
  overflow: hidden;
}

.NoInternet {
  background: #fff;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.NoInternet img {
  margin-bottom: 40px;
}

.NoInternet h1 {
  color: rgb(74, 74, 74);
  margin-top: 0;
  font-size: 20px;
  font-family: "Roboto";
  font-weight: 500;
  text-align: center;
}

.NoInternet p {
  color: rgb(74, 74, 74);
  margin-top: 10px;
  margin-bottom: 0;
  font-size: 16px;
  font-family: "Roboto";
  text-align: center;
}

.NoInternet button {
  box-shadow: none;
  margin-top: 40px;
  background: rgb(53, 203, 93);
  padding: 12px 22px;
  font-size: 14px;
}

.MuiToolbar-gutters {
  padding-left: 12px !important;
  padding-right: 13px !important;
}

.Toastify__toast-container.Toastify__toast-container--bottom-center {
  z-index: 99999999 !important;
}

.Toastify__toast {
  z-index: 99999999 !important;
}

.file-upload {
  cursor: inherit;
  display: block;
  font-size: 0;
  filter: alpha(opacity=0);
  min-height: 7%;
  min-width: 100%;
  opacity: 0;
  position: absolute;
  text-align: right;
  left: 0;
  right: 0;
}

.Toastify__toast--default {
  background: #494747 !important;
  color: white !important;
  bottom: 80px !important;
  /* position: relative; */
}

.MuiModal-root {
  z-index: 99999 !important;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.ReactModal__Body--open {
  overflow-y: hidden;
  position: fixed;
}

.highlight_color_info {
  background: var(--highlight_color_info);
}

.main-top-title-new {
  font-size: 20px;
  color: #160d2e;
  font-weight: 600;
  padding: 10px 0px 0 0px;
}

.header-title-page {
  background: white;
  color: #0A1C32;
  min-height: 50px;
  display: flex;
  align-items: flex-end;
  padding: 0 20px 0 20px;
  font-size: 20px;
  transition: 0.3s transform ease-in-out;
  justify-content: space-between;
}

.header-title-page-text {
  font-weight: 600;
}

.header-topbar-white {
  background-color: white !important;
  color: black !important;
  transition: 0.3s transform ease-in-out;
  box-shadow: none !important;
}

.main-top-title-new2 {
  font-size: 20px !important;
  color: #160d2e !important;
  font-weight: 400 !important;
}

.main-top-title-header {
  font-size: 16px !important;
  color: #160d2e;
  font-weight: 400 !important;
}

.slide-fade {
  transition: all 0.4s ease-out;
  opacity: 0;
  /* height: 0px; */
}

.slide-fade2 {
  transition: all 0.4s ease-out;
  /* opacity: 0; */
  /* height: 0px; */
}

.slide-fade-show {
  opacity: 1;
}

.flex-between-center {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.flex-between {
  display: flex;
  justify-content: space-between;
}
.flex-center {
  display: flex;
  align-items: center;
}
.flex {
  display: flex;
}
.flex-column {
  display: flex;
  flex-direction: column;
}
.generic-hr {
  border-top: 1px solid #ededed;
}

.common-top-page-subtitle {
  color: #767e86;
  font-size: 14px;
  font-weight: 400;
  margin: -10px 0 20px 0px;
  line-height: 1.6;
}

.common-top-page-subtitle-dark {
  color: #102f50;
  font-size: 16px;
  font-weight: 500;
  margin: -10px 0 20px 0;
  line-height: 1.6;
}

.common-how-steps {
  margin: 50px 0 40px 0;
  border-top: 1px solid #ededed;
  border-bottom: 1px solid #ededed;
  padding: 20px 0 20px 0;

  .top-tile {
    display: flex;
    justify-content: space-between;
  }
  .top-title {
    color: #0a1c32;
    font-size: 16px;
    font-weight: 600;
  }
  .top-icon {
    width: 14px;
  }
  .common-steps-images {
    margin: 40px 0 0 0;
  }
}

.generic-page-title {
  color: #0a1d32;
  font-size: 16px;
  font-weight: 500;
  margin: 0 0 5px 0;
}

.generic-page-subtitle {
  color: #767e86;
  font-size: 13px;
  font-weight: 400;
  margin: 0px 0 20px 0;
  line-height: 1.6;
}
/* ... */

